--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
 <meta charset="utf-8">
 <title>Pavan Kumar</title>
-<link REL="stylesheet" HREF="WEB-INF/CSS/styles.css">
-<link REL="icon"       HREF="WEB-INF/IMAGES/favicon.ico">
+<link REL="stylesheet" HREF="CSS/styles.css">
+<link REL="icon"       HREF="IMAGES/favicon.ico">
 <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Patrick+Hand|Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="top-container">
-<img CLASS="top-cloud" ALT="cloud1" SRC="WEB-INF/IMAGES/cloud.png">
+<img CLASS="top-cloud" ALT="cloud1" SRC="IMAGES/cloud.png">
 <h1>I'm Pavan Kumar.</h1>
 <p> a <span CLASS="uline">pro</span>grammer. </p>
-<img CLASS="bottom-cloud" ALT="cloud2" SRC="WEB-INF/IMAGES/cloud.png">
-<img CLASS="mountain" ALT="mountain" SRC="WEB-INF/IMAGES/mountain.png">
+<img CLASS="bottom-cloud" ALT="cloud2" SRC="IMAGES/cloud.png">
+<img CLASS="mountain" ALT="mountain" SRC="IMAGES/mountain.png">
 </div>
 
 <div class="middle-container">
    <div class="profcolor">
    <div class="profile">
-      <img class="my-photo" src="WEB-INF/IMAGES/Favicon.png" alt="my-photo">
+      <img class="my-photo" src="IMAGES/Favicon.png" alt="my-photo">
       <h2>Hello.</h2>
       <p CLASS="centertext">I am a SAP-ABAP programmer having 9 years of experience.</p>     
    </div>
@@ -28,7 +28,7 @@
    <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-         <img class="skill-photo" src="WEB-INF/IMAGES/data.png" alt="Computer">
+         <img class="skill-photo" src="IMAGES/data.png" alt="Computer">
          <h3>Developer</h3>
          <p CLASS="clear">I can develop applications using below technologies</p>
          <div CLASS="ulist">
@@ -42,7 +42,7 @@
          </div>
       </div>
       <div class="skill-row">
-         <img class="skill-photo2" src="WEB-INF/IMAGES/cricket.png" alt="Cricket">
+         <img class="skill-photo2" src="IMAGES/cricket.png" alt="Cricket">
          <h3>Other activities</h3>
          <p CLASS="clearrt">Love playing cricket, Good in photography, Nice acting skills, Spiritual seeker
                             Nature lover and growing my own greens using Hydroponics. </p>
