--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
    </div>
 </div>
 <div class="bottom-container">
-   <a class="footer-link" href="www.linkedin.com/in/s-pavan-kumar-raju-sagiraju-5b9541183">LinkedIn</a>
+   <a class="footer-link" href="https://www.linkedin.com/in/s-pavan-kumar-raju-sagiraju-5b9541183">LinkedIn</a>
    <a class="footer-link" href="https://twitter.com/sspavan">Twitter</a>
    <a class="footer-link" href="https://sspkraju.github.io/Mywebpage/">Website</a>
    <p STYLE="color: white" CLASS="copyright">© 2019 Srinivasa Pavan Kumar Raju SAGIRAJU.</p>
